[project]
name = "huanmu_agent"
version = "0.0.1"
description = "Starter template for making a custom Reasoning and Action agent (using tool calling) in LangGraph."
authors = [
    { name = "danis", email = "deniswersion@gmail.com" },
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.2.6",
    "langchain-openai>=0.1.22",
    "langchain-anthropic>=0.1.23",
    "langchain>=0.2.14",
    "langchain-fireworks>=0.1.7",
    "python-dotenv>=1.0.1",
    "langchain-google-vertexai<=2.0.19",
    "pymilvus[model]>=2.3.7",
    "langchain-milvus",
    "langchain-community",
    "unstructured[all-docs]",
    "google-genai>=1.7.0",
    "pymilvus.model"
]
[project.optional-dependencies]
dev = [
    "mypy>=1.11.1",
    "ruff>=0.6.1",
    "pytest>=8.3.5",
    "pytest-watch>=4.2.0",
    "pytest-profile>=1.0.0",
    "codespell>=2.2.6",
    "langgraph-cli[inmem]>=0.1.71"
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["huanmu_agent"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035", # Allow typing_extensions imports
    "D417",  # Relax docstring requirements
    "E501",  # Line length
]
[tool.ruff.lint.pydocstyle]
convention = "google"
